--- a/sass/index.scss
+++ b/sass/index.scss
@@ -103,6 +103,10 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+	.main-title {
+		font-size: 20px;
+	}
+
 	#canvas {
 		width: 100%;
 		height: 100%;
@@ -114,6 +118,7 @@ body {
 	}
 
 	.canvas-wrap, .ctrl-panel {
+		padding-bottom: 20px;
 		width: 100%;
 	}
 
