--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,6 +8,7 @@ body {
 .main-title {
 	margin: 20px auto;
 	font-size: 32px;
+	font-weight: bold;
 	text-align: center;
 }
 
@@ -65,7 +66,7 @@ body {
 	}
 }
 
-.btn-save {
+.btn-save, .btn-fb {
 	margin-top: 20px;
 	background: #fff;
 	display: block;
@@ -103,13 +104,13 @@ body {
 }
 
 @media screen and (max-width: 500px) {
-	.main-title {
-		font-size: 20px;
-	}
-
 	#canvas {
 		width: 100%;
 		height: 100%;
+	}
+
+	.main-title {
+		font-size: 20px;
 	}
 
 	.main-content {
